--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
     <title>My first webpage, with JavaScript</title>
   </head>
   <body>
-    <script>
-      function myButtonClicked() {
-        alert("Hello, Wordl!")
-      }
-    </script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
@@ -41,14 +37,10 @@
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
           onclick="myButtonClicked()"
-        >
+        ></button>
           Click me!
         </button>
-        <br />
-        <br />
-        <p>
-          <a href="./index2.html">My index2.html page</a>
-        </p>
+        <img src="./images/HTML-style-guide.jpeg" alt="style" />
       </main>
     </div>
   </body>
