--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         ></button>
           Click me!
         </button>
-        <img src="./images/HTML-style-guide.jpeg" alt="style" />
+        <img src="./images/genesis-1-1-2.jpeg" alt="style" />
       </main>
     </div>
   </body>
