--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://brennan-lee.github.io/ICS2O-template/"
     />
     <link rel="manifest" href="/ICS2O-template/manifest.webmanifest" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
     <link
